--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body class="bg-dark-950 text-dark-100">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
